修改网站标题为英文

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>网络词汇翻译器</title>
+        <title>网络词汇翻译器(Popular Words Translator)</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
