--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name='网络词汇翻译器' content='test'>
         <title>网络词汇翻译器(Popular Words Translator)</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
