--- a/index.html
+++ b/index.html
@@ -2,18 +2,32 @@
 <html>
     <head>
         <title>网络词汇翻译器</title>
-        <link rel="stylesheet" href="css/style.css">
+        <!-- <link rel="stylesheet" href="css/style.css"> -->
     </head>
     <body>
-        <h1>网络词汇翻译器</h1>
+        <div>
+            
+            <h1 style="font-size: 50px;
+            line-height: 140px;
+            margin: 0 0 0 32.5px;">网络词汇翻译器</h1>
+            <img src="photos/c9264d9a05041d59aa6a3d84a7dcda5.jpg" height='100vw' style="position: absolute;width: 100px;
+            position: absolute;
+            right: 32.5px;
+            top: 32.5px;">
+        </div>
+        <hr>
         <ul>
-            <li>查找词汇：</li>
+            <li>&nbsp;&nbsp;&nbsp;查找词汇：</li>
         </ul>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
         <input type="text" placeholder="词汇">
         <button>提交</button>
         <br>
         <br>
         <br>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
         <button>添加</button>
+        <br>
+        <footer></footer>
     </body>
 </html>
