--- a/index.html
+++ b/index.html
@@ -10,24 +10,13 @@
             <h1 style="font-size: 50px;
             line-height: 140px;
             margin: 0 0 0 32.5px;">网络词汇翻译器</h1>
-            <img src="./c9264d9a05041d59aa6a3d84a7dcda5.jpg" height='100vw' style="position: absolute;width: 100px;
-            position: absolute;
+            <img src="c9264d9a05041d59aa6a3d84a7dcda5.jpg" height='100vw' style="width: 100px;
+            position:absolute;
             right: 32.5px;
             top: 32.5px;">
         </div>
         <hr>
-        <ul>
-            <li>&nbsp;&nbsp;&nbsp;查找词汇：</li>
-        </ul>
-        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        <input type="text" placeholder="词汇">
-        <button>提交</button>
-        <br>
-        <br>
-        <br>
-        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-        <button>添加</button>
-        <br>
-        <footer></footer>
+        <input type="text" placeholder="查找词汇..." style="margin:15px 0px 15px 15px;width: 85%;height: 35px;">
+        <button style="width: 10%;height: 41px;">提交</button>
     </body>
 </html>
