--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h1 style="font-size: 50px;
             line-height: 140px;
             margin: 0 0 0 32.5px;">网络词汇翻译器</h1>
-            <img src="c9264d9a05041d59aa6a3d84a7dcda5.jpg" height='100vw' style="width: 100px;
+            <img src="logo.jpg" height='100vw' style="width: 100px;
             position:absolute;
             right: 32.5px;
             top: 32.5px;">
