--- a/耗子尾汁/index.html
+++ b/耗子尾汁/index.html
@@ -10,7 +10,7 @@
     <hr>
     <p>&emsp;&emsp;该梗出自于一位自称是“混元功法”的掌门人，叫马保国，而这个成语是他在被两个年轻人打了以后发到微博上的视频里所说的。</p>
     <br>
-    <p>&emsp;&emsp;释意：同“好自为之”，因马保国是山东人，所以有一些地方上的口音，被网友们听成了“<a href="https://www.bilibili.com/video/BV1HJ411L7DP">耗子尾汁</a>”。</p>
+    <p>&emsp;&emsp;释意：同“好自为之”，因马保国是山东人，所以有一些地方上的口音，被网友们听成了“<a href="https://www.bilibili.com/video/BV1HJ411L7DP" target="_blank">耗子尾汁</a>”。</p>
     <iframe src="https://player.bilibili.com/player.html?bvid=BV1HJ411L7DP" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
     <style>
         iframe{
