--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
         <title>网络词汇翻译器</title>
         <!-- <link rel="stylesheet" href="css/style.css"> -->
+        <link rel="icon" href="logo.jpg">
     </head>
     <body>
         <div>
-            
             <h1 style="font-size: 50px;
             line-height: 140px;
             margin: 0 0 0 32.5px;">网络词汇翻译器</h1>
@@ -19,5 +19,6 @@
         <input type="text" placeholder="查找词汇..." style="margin:15px 0px 15px 15px;width: 85%;height: 35px;">
         <script src="scripts/scripts.js"></script>
         <button style="width: 10%;height: 41px;" onclick="b()">进入</button>
+        <div style="width:100%; height: 11%; background-color:lightgray; position:absolute; bottom: 0;"><p style="width: 100%; position: absolute; bottom: 5%; text-align: center;">2021_popularWordsTranslator__by:Lsh,Smh</p></div>
     </body>
 </html>
