--- a/index.html
+++ b/index.html
@@ -2,23 +2,20 @@
 <html>
     <head>
         <title>网络词汇翻译器</title>
-        <!-- <link rel="stylesheet" href="css/style.css"> -->
+        <link rel="stylesheet" href="styles/style_home.css">
         <link rel="icon" href="logo.jpg">
         <script src="scripts/scripts.js"></script>
     </head>
     <body>
         <div>
-            <h1 style="font-size: 50px;
-            line-height: 140px;
-            margin: 0 0 0 32.5px;">网络词汇翻译器</h1>
-            <img src="logo.jpg" height='100vw' style="
-            position:absolute;
-            right: 32.5px;
-            top: 32.5px;">
+            <h1>网络词汇翻译器</h1>
+            <img src="logo.jpg" height='100vw'>
         </div>
         <hr>
-        <input type="text" placeholder="查找词汇..." style="margin:15px 0px 15px 15px;width: 85%;height: 35px;">
-        <button style="width: 10%;height: 41px;" onclick="b()">进入</button>
-        <div style="width:99%; height: 10%; background-color:#eee; position:absolute; bottom: 0;"><p style="width: 100%; position: absolute; bottom: 5%; text-align: center;">2021_popularWordsTranslator__by:Lsh,Smh</p></div>
+        <input type="text" placeholder="查找词汇...">
+        <button onclick="b()">进入</button>
+        <div class="info">
+            <p>2021_popularWordsTranslator__by:Lsh,Smh</p>
+        </div>
     </body>
 </html>
