--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>网络词汇翻译器</title>
         <link rel="stylesheet" href="styles/style_home.css">
-        <link rel="icon" href="logo.jpg">
+        <link rel="icon" href="logo_blank.png">
         <script src="scripts/scripts.js"></script>
     </head>
     <body>
