--- a/words/坎油揣/index.html
+++ b/words/坎油揣/index.html
@@ -8,11 +8,17 @@
 </head>
 
 <body>
-    <h1 style="margin: 35px; font-size: 400%;">坎油揣</h1>
+    <div>
+        <h1>坎油揣</h1>
+        <img src="../../logo.jpg" height='100vw'>
+    </div>
     <hr>
-    <p>&emsp;&emsp;该梗出自于网络一个搞笑视频，视频中这位阿姨声称自己可以六秒说出八句英语，而她的每一个视频最后都会说一句“坎油揣？”十分魔性。</p>
-    <iframe class="video" src="//player.bilibili.com/player.html?aid=415940999&bvid=BV1KV41187pS&cid=276011576&page=1"
-        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+    <div class="content">
+        <p>该梗出自于网络一个搞笑视频，视频中这位阿姨声称自己可以六秒说出八句英语，而她的每一个视频最后都会说一句“？”十分魔性。</p>
+        <iframe class="video"
+            src="//player.bilibili.com/player.html?aid=415940999&bvid=BV1KV41187pS&cid=276011576&page=1" scrolling="no"
+            border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+    </div>
 </body>
 
 </html>
