--- a/words/迷hotel/index.html
+++ b/words/迷hotel/index.html
@@ -8,11 +8,17 @@
 </head>
 
 <body>
-    <h1 style="margin: 35px; font-size: 400%;">迷hotel</h1>
+    <div>
+        <h1>迷hotel</h1>
+        <img src="../../logo.jpg" height='100vw'>
+    </div>
     <hr>
-    <p>&emsp;&emsp;该梗出自于一位叫做“郭老师”的主播，她在某次直播时用自创的郭语来解说吃猕猴桃，说的非常像“迷hotel”故被戏称为迷hotel。</p>
-    <iframe class="video" src="//player.bilibili.com/player.html?aid=83128032&bvid=BV1GJ411n7qJ&cid=142209809&page=1"
-        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+    <div class="content">
+        <p>该梗出自于一位叫做“郭老师”的主播，她在某次直播时用自创的郭语来解说吃猕猴桃，说的非常像“”故被戏称为迷hotel。</p>
+        <iframe class="video"
+            src="//player.bilibili.com/player.html?aid=83128032&bvid=BV1GJ411n7qJ&cid=142209809&page=1" scrolling="no"
+            border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+    </div>
 </body>
 
 </html>
