--- a/words/闹太套/index.html
+++ b/words/闹太套/index.html
@@ -8,11 +8,17 @@
 </head>
 
 <body>
-    <h1 style="margin: 35px; font-size: 400%;">闹太套</h1>
+    <div>
+        <h1>闹太套</h1>
+        <img src="../../logo.jpg" height='100vw'>
+    </div>
     <hr>
-    <p>&emsp;&emsp;该梗出自于黄晓明唱的一首歌“one world one dream”，其中高潮部分的歌词是“not at all”，由于他的英语并不是很标准，所以被网友们听成了“闹太套”。</p>
-    <iframe class="video" src="//player.bilibili.com/player.html?aid=63628896&bvid=BV1w4411D7ue&cid=110484217&page=1"
-        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+    <div class="content">
+        <p>该梗出自于黄晓明唱的一首歌“one world one dream”，其中高潮部分的歌词是“not at all”，由于他的英语并不是很标准，所以被网友们听成了“”。</p>
+        <iframe class="video"
+            src="//player.bilibili.com/player.html?aid=63628896&bvid=BV1w4411D7ue&cid=110484217&page=1" scrolling="no"
+            border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+    </div>
 </body>
 
 </html>
