--- a/words/黑人抬棺/index.html
+++ b/words/黑人抬棺/index.html
@@ -8,11 +8,17 @@
 </head>
 
 <body>
-    <h1 style="margin: 35px; font-size: 400%;">黑人抬棺</h1>
+    <div>
+        <h1>黑人抬棺</h1>
+        <img src="../../logo.jpg" height='100vw'>
+    </div>
     <hr>
-    <p>&emsp;&emsp;该梗出自于一段加纳送葬仪式的视频，此视频流传后被网友们配上了“astronomia”这首魔性dj，之后就广为流传了起来，并被制作出了许多二次创作</p>
-    <iframe class="video" src="//player.bilibili.com/player.html?aid=370010949&bvid=BV1NZ4y1j7nw&cid=172423516&page=1"
-        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+    <div class="content">
+        <p>该梗出自于一段加纳送葬仪式的视频，此视频流传后被网友们配上了“astronomia”这首魔性dj，之后就广为流传了起来，并被制作出了许多二次创作</p>
+        <iframe class="video"
+            src="//player.bilibili.com/player.html?aid=370010949&bvid=BV1NZ4y1j7nw&cid=172423516&page=1" scrolling="no"
+            border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+    </div>
 </body>
 
 </html>
