--- a/words/夏啵/index.html
+++ b/words/夏啵/index.html
@@ -8,11 +8,17 @@
 </head>
 
 <body>
-    <h1 style="margin: 35px; font-size: 400%;">夏啵</h1>
+    <div>
+        <h1>夏啵</h1>
+        <img src="../../logo.jpg" height='100vw'>
+    </div>
     <hr>
-    <p>&emsp;&emsp;该梗出自于一位绝地求生主播鲨鱼的口头禅，他打游戏的时候经常被坑或者遇到挂，然后每次死了后就会说“下播！”或者“我想下播了”然而却被网友们听成了“夏啵”并根据这个创作了许多鲨鱼跟夏啵的爱情故事</p>
-    <iframe class="video" src="//player.bilibili.com/player.html?aid=756156612&bvid=BV1Sr4y1T7BN&cid=282109331&page=1"
-        scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+    <div class="content">
+        <p>该梗出自于一位绝地求生主播鲨鱼的口头禅，他打游戏的时候经常被坑或者遇到挂，然后每次死了后就会说“下播！”或者“我想下播了”然而却被网友们听成了“”并根据这个创作了许多鲨鱼跟夏啵的爱情故事</p>
+        <iframe class="video"
+            src="//player.bilibili.com/player.html?aid=756156612&bvid=BV1Sr4y1T7BN&cid=282109331&page=1" scrolling="no"
+            border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+    </div>
 </body>
 
 </html>
