--- a/index.html
+++ b/index.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>网络词汇翻译器</title>
-        <link rel="stylesheet" href="styles/style_home.css">
-        <link rel="icon" href="logo_blank.png">
-        <script src="scripts/scripts.js"></script>
-    </head>
-    <body>
-        <div>
-            <h1>网络词汇翻译器</h1>
-            <img src="logo.jpg" height='100vw'>
-        </div>
-        <hr>
-        <input type="text" placeholder="查找词汇...">
-        <button onclick="b()">进入</button>
-        <div class="info">
-            <p>2021_popularWordsTranslator__by:Lsh,Smh</p>
-        </div>
-    </body>
+
+<head>
+    <title>网络词汇翻译器</title>
+    <link rel="stylesheet" href="styles/style_home.css">
+    <link rel="icon" href="logo_blank.png">
+    <script src="scripts/scripts.js"></script>
+</head>
+
+<body>
+    <div>
+        <h1>网络词汇翻译器</h1>
+        <img src="logo.jpg" height='100vw'>
+    </div>
+    <hr>
+    <input type="text" placeholder="查找词汇...">
+    <button onclick="b()">进入</button>
+    <div class="info">
+        <p class="pinfo">2021_popularWordsTranslator__by:Lsh,Smh</p>
+    </div>
+    <div class="reco">
+        <a href="words/奥利给/" class="reco_content">
+            <h2>奥利给</h2>
+            <p>该梗早在2018年就已出现，是"给力奥"倒过来的说法。后来一位自称“冬泳怪鸽”的人说了后大火，广为人知。他擅长冬...</p>
+        </a>
+        <a href="words/耗子尾汁/" class="reco_content">
+            <h2>耗子尾汁</h2>
+            <p>该梗出自于一位自称是“混元功法”的掌门人，叫马保国，而这个成语是他在被两个年轻人打了以后发到微博上的视频...</p>
+        </a>
+        <a href="words/黑人抬棺/" class="reco_content">
+            <h2>黑人抬棺</h2>
+            <p>该梗出自于一段加纳送葬仪式的视频，此视频流传后被网友们配上了“astronomia”这首魔性dj，之后就广为流传了起来，并被制作...</p>
+        </a>
+    </div>
+</body>
+
 </html>
