--- a/words/奥利给/index.html
+++ b/words/奥利给/index.html
@@ -14,7 +14,7 @@
     </div>
     <hr>
     <div class="content">
-        <p>该梗早在2018年就已出现，是"给里奥"倒过来的说法。后来一位自称“冬泳怪鸽”的人说了后大火，广为人知。他擅长冬泳。经常发一些正能量的视频。</p>
+        <p>该梗早在2018年就已出现，是"给力奥"倒过来的说法。后来一位自称“冬泳怪鸽”的人说了后大火，广为人知。他擅长冬泳。经常发一些正能量的视频。</p>
         <iframe class="video" src="//player.bilibili.com/player.html?aid=53058902&bvid=BV184411j7Wi&cid=92830344&page=1"
             scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
         <iframe class="video" src="//player.bilibili.com/player.html?aid=56020200&bvid=BV1r4411G7R7&cid=202871016&page=1"
