--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <!-- 这是一个翻译网络词汇的网站。 -->
     <title>网络词汇翻译器</title>
     <link rel="stylesheet" href="styles/style_home.css">
     <link rel="icon" href="logo_blank.png">
